<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="#E8EEF7">
	<LinearLayout android:id="@+id/layout"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">
		<Button android:text="@string/st_ok" android:id="@+id/st_btn_ok"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:text="@string/st_alarmAir" android:id="@+id/st_btn_alarmAir"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
	<RelativeLayout
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_above="@id/layout">
		
	    <ImageView android:id="@+id/title" android:background="@drawable/title"
	    	    android:layout_width="fill_parent" android:layout_height="90px"/>
	    
		<TextView android:id="@+id/btn_st_title" android:text="@string/st_title" 
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="15dip" android:textColor="@color/black"
				android:layout_below="@id/title" android:layout_marginTop="20px"
				/>
		<RadioGroup android:id="@+id/st_radioGroup" android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_below="@id/btn_st_title" android:layout_alignLeft="@id/btn_st_title"
			android:layout_marginLeft="30dip">
			<RadioButton android:text="@string/st_minute" android:id="@+id/st_rad_min"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="@color/black"/>
			<RadioButton android:text="@string/st_second" android:id="@+id/st_rad_sec"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:checked="true" android:textColor="@color/black"/>
		</RadioGroup>
		<EditText android:id="@+id/st_edittext" android:hint="@string/st_hint" 
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginLeft="30dip" android:layout_marginRight="30dip"
				android:layout_below="@id/st_radioGroup" android:numeric="integer"
				android:singleLine="true"
				/>
	</RelativeLayout>
</RelativeLayout>